--- a/terms.html
+++ b/terms.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>parpar8090.com</title>
+    <title>TERMS & CONDITIONS - parpar8090.com</title>
     <!-- CSSs -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    
 </head>
 <body>
     <!--Header / Navbar-->
@@ -53,9 +53,8 @@
     </section>
 
     <!--Footer-->
-    <footer id="footer">© 2021
-        <a class="copyright" href="https://parpar8090.com" target="_blank">parpar8090.com</a>
-        <a class="terms" href="terms.html" target="_blank">Terms & Conditions</a>
+    <footer id="footer"> 
     </footer>
+    <script onload="setFooterFromMain('footer')" src="/js/script.js"></script>
 </body>
 </html>
