--- a/index.html
+++ b/index.html
@@ -1,61 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head class="head">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>parpar8090.com</title>
     <!-- CSSs -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- JSs -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="js/init_page.js"></script>
 </head>
 <body>
-    <!--Header / Navbar-->
-    <header class="header">
-        <div class="container">
-            <nav class="navbar">
-                <div class="container-fluid">
-                  <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav">
-                      <span class="icon-bar">__</span>
-                      <span class="icon-bar">__</span>
-                      <span class="icon-bar">__</span>                        
-                    </button>
-                    <a class="navbar-brand" href="#">parpar8090.com</a>
-                  </div>
-                  <div class="collapse navbar-collapse" id="nav">
-                    <ul class="nav navbar-nav">
-                      <li class="active"><a href="#">Home</a></li>
-                      <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                          <li><a href="#">Page 1-1</a></li>
-                          <li><a href="#">Page 1-2</a></li>
-                          <li><a href="#">Page 1-3</a></li>
-                        </ul>
-                      </li>
-                      <li><a href="#">Page 2</a></li>
-                      <li><a href="#">Page 3</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-        </div>
-    </header>
+    <!-- Header / Navbar -->
+    <header class="header"></header>
 
-    <!--Home-->
+    <!-- Body -->
     <section class="section">
-        <img class=""/>
         <p>Lorem Ipsum Dolor Sit.</p>
     </section>
 
-    <!--Footer-->
-    <footer id="footer">© 2021
-        <a class="copyright" href="https://parpar8090.com" target="_blank">parpar8090.com</a>
-        <a class="terms" href="terms.html" target="_blank">Terms & Conditions</a>
-    </footer>
+    <!-- Footer -->
+    <footer class="footer"></footer>
 </body>
 </html>
