--- a/terms.html
+++ b/terms.html
@@ -10,51 +10,17 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    
+
+    <script src="js/init_page.js"></script>
 </head>
 <body>
-    <!--Header / Navbar-->
-    <header class="header">
-        <div class="container">
-            <nav class="navbar">
-                <div class="container-fluid">
-                  <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav">
-                      <span class="icon-bar">__</span>
-                      <span class="icon-bar">__</span>
-                      <span class="icon-bar">__</span>                        
-                    </button>
-                    <a class="navbar-brand" href="#">parpar8090.com</a>
-                  </div>
-                  <div class="collapse navbar-collapse" id="nav">
-                    <ul class="nav navbar-nav">
-                      <li class="active"><a href="#">Home</a></li>
-                      <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                          <li><a href="#">Page 1-1</a></li>
-                          <li><a href="#">Page 1-2</a></li>
-                          <li><a href="#">Page 1-3</a></li>
-                        </ul>
-                      </li>
-                      <li><a href="#">Page 2</a></li>
-                      <li><a href="#">Page 3</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-        </div>
-    </header>
+    <header class="header"></header>
 
-    <!--Home-->
+    <!-- Body -->
     <section class="section">
-        <img class=""/>
-        <p>Lorem Ipsum Dolor Sit.</p>
+        <h2>Terms & Conditions</h2>
     </section>
 
-    <!--Footer-->
-    <footer id="footer"> 
-    </footer>
-    <script onload="setFooterFromMain('footer')" src="/js/script.js"></script>
+    <footer class="footer"></footer>
 </body>
 </html>
