--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,4 @@
-© 2021
-<a class="copyright" href="https://parpar8090.com">parpar8090.com</a>
-<a class="terms" href="terms.html">Terms & Conditions</a>
+<footer class="footer">© 2021 
+  <a class="copyright" href="https://parpar8090.com">parpar8090.com</a>
+  <a class="terms" href="terms.html">Terms & Conditions</a>  
+</footer>
