--- a/terms.html
+++ b/terms.html
@@ -7,7 +7,7 @@
     <title>TERMS & CONDITIONS - parpar8090.com</title>
     <!-- CSSs -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <!-- JSs-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
