--- a/index.html
+++ b/index.html
@@ -6,24 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>parpar8090.com</title>
     <!-- CSSs -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" 
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- JSs-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.6/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://kit.fontawesome.com/59aedcb2d8.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="js/init_page.js"></script>
 </head>
-<body>
+<body class="fade-in">
     <!-- Header / Navbar -->
-    <header class="header"></header>
+    <header class="header fill-all"></header>
 
     <!-- Body -->
-    <section class="section">
-        <p>Lorem Ipsum Dolor Sit.</p>
+    <section class="section fill-all">
+        <img class="fit" style="width:100%; height:100%" src="assets/background.png"/>
+        <div class="centered">
+            <h1>
+                <span id="typewriter" data-array=""></span>
+                <span class="cursor"></span>
+            </h1>
+        </div>
+        <script src="js/typescript.js"></script>
     </section>
-
-    <!-- Footer -->
-    <footer class="footer"></footer>
 </body>
 </html>
