--- a/header.html
+++ b/header.html
@@ -9,7 +9,7 @@
         <a class="nav-link home" href="index.html">Home <span><i class="fas fa-home"></i></span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link about" href="#">About</a>
+        <a class="nav-link about" href="about.html">About</a>
       </li>
       <li class="nav-item">
         <a class="nav-link hobbies" href="#">Hobbies</a>
