--- a/about.html
+++ b/about.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>parpar8090.com</title>
+    <title>TERMS & CONDITIONS - parpar8090.com</title>
     <!-- CSSs -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" 
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-
     <!-- JSs-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://kit.fontawesome.com/59aedcb2d8.js" crossorigin="anonymous"></script>
@@ -17,24 +16,17 @@
     integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="js/init_page.js"></script>
 </head>
-<body class="fade-in">
-    <!-- Header / Navbar -->
-    <header class="fade-in header fill-all"></header>
+<body>
+    <header class="header"></header>
 
     <!-- Body -->
-    <section class="section fill-all">
-        <img class="fit" src="assets/background.png"/>
-        <div class="centered">
-            <p>paragraph</p>
-            <h1>
-                <span id="typewriter" data-array=""></span>
-                <span class="cursor"></span>
-            </h1>
-        </div>
-        <div class="centered" style="top:70%;">
-            <a class="btn round" href="about.html" target="_blank">About</a>
-        </div>
-        <script src="js/typescript.js"></script>
+    <section class="section">
+        <h2>About Me</h2>
+        <hr>
+        <p>I am parpar8090</p>
+        <p>I like to play Minecraft</p>
     </section>
+
+    <footer class="footer"></footer>
 </body>
 </html>
